force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Actions_Required__c.field-meta.xml
<CustomField>
    <fullName>Actions_Required__c</fullName>
    <formula>IF(ISPICKVAL(Requires_Technical_Review__c , &apos;Yes&apos;), &apos;Engingeering to analyze Tech Review Comments and remove Tech Review Flag&apos;,If(OR( Regular_Unit_Price_Each__c &gt;8000000, Regular_Unit_Price_Each__c=0), &apos;Engineering to Review Unit Price&apos;, If(ISPICKVAL(Engineering_Status__c, &apos;Requires Approval&apos;), &apos;Engineering to Release Quote Line&apos;,&apos;N/A&apos;) ))</formula>
    <label>Actions Required</label>
    <type>Text</type>
</CustomField>