force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Adjusted_Commission_PCT__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Commission_PCT__c</fullName>
    <formula>If (Override_Commission__c &gt; 0, Override_Commission__c,
If ((Maximum_Commission__c - ( Discount__c /2))&lt;0, 0,(Maximum_Commission__c - ( Discount__c /2)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjusted Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>