force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Assigned_Estimator__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Estimator__c</fullName>
    <label>Assigned Estimator*</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aaron Ratigan</fullName>
            </value>
            <value>
                <fullName>Zach Bromberg</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>