force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Body_Material__c.field-meta.xml
<CustomField>
    <fullName>Body_Material__c</fullName>
    <label>Body Material</label>
    <length>80</length>
    <type>Text</type>
</CustomField>