force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>Commission_Amount__c</fullName>
    <formula>(Adjusted_Commission_PCT__c *  (Discountable_List_Price__c - Discount_Amount__c)) *  SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the commission amount for the total Quantity on this line item.</inlineHelpText>
    <label>Commission Amount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>