force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Config_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Config_Record_ID__c</fullName>
    <label>Config Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>