force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Configurator_Id__c.field-meta.xml
<CustomField>
    <fullName>Configurator_Id__c</fullName>
    <description>CC - Id of the configurator used to create Quote Line record. Used to navigate back to specific configurator from QLE via custom action.</description>
    <label>Configurator Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>