force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Conga_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Conga_Product_ID__c</fullName>
    <formula>SBQQ__Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Product ID</label>
    <type>Text</type>
</CustomField>