force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Converted_Pressure_Setting__c.field-meta.xml
<CustomField>
    <fullName>Converted_Pressure_Setting__c</fullName>
    <formula>(Pressure_Setting__c  * 14.6959) - -14.6959</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Converted Pressure Setting</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>