force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cost_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Cost_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cost Overridden</label>
    <type>Checkbox</type>
</CustomField>