force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Currency__c.field-meta.xml
<CustomField>
    <fullName>Customer_Currency__c</fullName>
    <formula>TEXT( SBQQ__Quote__r.Currency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Currency</label>
    <type>Text</type>
</CustomField>