force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_Leadtime__c.field-meta.xml
<CustomField>
    <fullName>Customer_Leadtime__c</fullName>
    <label>Customer Leadtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>