force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Customer_s_Part_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_s_Part_No__c</fullName>
    <label>Customer&apos;s Part No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>