force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Count__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Count__c</fullName>
    <label>Delivery Count</label>
    <summaryForeignKey>Delivery_Information__c.Quote_Line__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>