force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Delivery_Quantity_Total__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Quantity_Total__c</fullName>
    <label>Delivery Quantity Total</label>
    <summarizedField>Delivery_Information__c.Quantity__c</summarizedField>
    <summaryForeignKey>Delivery_Information__c.Quote_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>