force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Description_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Description_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Description Overridden</label>
    <type>Checkbox</type>
</CustomField>