force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DimA__c.field-meta.xml
<CustomField>
    <fullName>DimA__c</fullName>
    <label>DimA</label>
    <length>50</length>
    <type>Text</type>
</CustomField>