force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DimC__c.field-meta.xml
<CustomField>
    <fullName>DimC__c</fullName>
    <label>DimC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>