force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Director_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Director_Max_Discount__c</fullName>
    <label>Director Max Discount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>