force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Discount. (%)</label>
    <precision>13</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>