force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Greater_0__c.field-meta.xml
<CustomField>
    <fullName>Discount_Greater_0__c</fullName>
    <formula>IF(Discount__c &gt; 0,TRUE,FALSE)</formula>
    <label>Discount &gt; 0</label>
    <type>Checkbox</type>
</CustomField>