force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discountable_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Discountable_List_Price__c</fullName>
    <label>Discountable List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>