force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discountable_Lot_Charge__c.field-meta.xml
<CustomField>
    <fullName>Discountable_Lot_Charge__c</fullName>
    <label>Discountable Lot Charge</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>