force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discountable_Test_Lot_Price__c.field-meta.xml
<CustomField>
    <fullName>Discountable_Test_Lot_Price__c</fullName>
    <label>Discountable Test Lot Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>