force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Drawing_to_be_created_outside_of_Config__c.field-meta.xml
<CustomField>
    <fullName>Drawing_to_be_created_outside_of_Config__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Drawing to be created outside of Config</label>
    <type>Checkbox</type>
</CustomField>