force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DrawingID__c.field-meta.xml
<CustomField>
    <fullName>DrawingID__c</fullName>
    <description>This field will have the name of static resource</description>
    <label>DrawingID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>