force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Drawings_Status__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Status__c</fullName>
    <label>Drawings Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Required</fullName>
            </value>
            <value>
                <fullName>Attached</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>