force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Eng_Rep_2_Commission_Percent__c.field-meta.xml
<CustomField>
    <fullName>Eng_Rep_2_Commission_Percent__c</fullName>
    <label>Engineering Rep 2 Commission Percent</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>