force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Engineering_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Engineering Overridden</label>
    <type>Checkbox</type>
</CustomField>