force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Engineering_Status__c.field-meta.xml
<CustomField>
    <fullName>Engineering_Status__c</fullName>
    <defaultValue>&apos;No&apos;</defaultValue>
    <label>Engineering Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <label>Requires Approval</label>
            </value>
            <value>
                <fullName>No</fullName>
                <label>No Approval Required</label>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>