force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Inside_Sales_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Max_Discount__c</fullName>
    <label>Inside Sales Max Discount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>