force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Inventory_Serial_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Serial_Tracking__c</fullName>
    <label>Inventory Serial Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Serial Tracking</fullName>
            </value>
            <value>
                <fullName>Not Serial Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>