force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Expired</label>
    <type>Checkbox</type>
</CustomField>