force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Special__c.field-meta.xml
<CustomField>
    <fullName>Is_Special__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Special</label>
    <type>Checkbox</type>
</CustomField>