force-app/main/default/objects/SBQQ__QuoteLine__c/fields/isIFSManaged__c.field-meta.xml
<CustomField>
    <fullName>isIFSManaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Integration use only</description>
    <label>isIFSManaged</label>
    <type>Checkbox</type>
</CustomField>