force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lead_Time_Override__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Override__c</fullName>
    <label>Intl. Lead Time Adder Override</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>