force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Leadtime_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Leadtime_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leadtime Overridden</label>
    <type>Checkbox</type>
</CustomField>