force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Leadtime_Site_20__c.field-meta.xml
<CustomField>
    <fullName>Leadtime_Site_20__c</fullName>
    <label>Config Lead Time Site 20</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>