force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Line_Number__c</fullName>
    <description>Used to override the default Line_No mapping on a line item</description>
    <label>Line Number (IFS Override)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>