force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Lot_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Lot_Tracking__c</fullName>
    <label>Lot Tracking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order Based</fullName>
            </value>
            <value>
                <fullName>Lot Tracking</fullName>
            </value>
            <value>
                <fullName>Not Lot Tracking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>