force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Max_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Max_Lead_Time__c</fullName>
    <label>Max Lead Time</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>