force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Maximum_Commission__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Commission__c</fullName>
    <label>Maximum Commission</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>