force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Migration_ID__c.field-meta.xml
<CustomField>
    <fullName>Migration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Migration ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>