force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Price_Each_Cust_Curr__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_Each_Cust_Curr__c</fullName>
    <formula>Net_Price_Each__c * SBQQ__Quote__r.Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net_Price_Each__c * SBQQ__Quote__r.Conversion_Rate__c</inlineHelpText>
    <label>Net Price Each (Cust. Curr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>