force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Non_Discountable_Lot_Charge_Adder__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Lot_Charge_Adder__c</fullName>
    <label>Non-Discountable Lot Charge Adder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>