force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.SBQQ__Opportunity2__r.StageName)</formula>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>