force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Part_Class__c.field-meta.xml
<CustomField>
    <fullName>Part_Class__c</fullName>
    <label>Part Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
                <label>Normal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>