force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Parts_Managed_In__c.field-meta.xml
<CustomField>
    <fullName>Parts_Managed_In__c</fullName>
    <label>Parts Managed In</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IFS</fullName>
            </value>
            <value>
                <fullName>SF</fullName>
                <label>Salesforce</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>