force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pressure_Setting__c.field-meta.xml
<CustomField>
    <fullName>Pressure_Setting__c</fullName>
    <label>Pressure Setting</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>