force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Overridden__c.field-meta.xml
<CustomField>
    <fullName>Price_Overridden__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Overridden</label>
    <type>Checkbox</type>
</CustomField>