force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Primary_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Vendor__c</fullName>
    <label>Primary Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>