force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Red-ball</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>