force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Production_Planning_Leadtime__c.field-meta.xml
<CustomField>
    <fullName>Production_Planning_Leadtime__c</fullName>
    <label>Production Planning Leadtime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>