force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Number__c</fullName>
    <label>Quote Line Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>