force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Reference__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Reference</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Quote Lines (Quote Line Reference)</relationshipLabel>
    <relationshipName>Quote_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>