force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QuoteLineNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <label>QuoteLineNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>