force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Regular_Total_Price_Cust_Curr__c.field-meta.xml
<CustomField>
    <fullName>Regular_Total_Price_Cust_Curr__c</fullName>
    <formula>Regular_Total_Price_USD__c * SBQQ__Quote__r.Conversion_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ext. Net Price * SBQQ__Quote__r.Conversion_Rate__c</inlineHelpText>
    <label>Ext. Net Price (Cust. Curr)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>