force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requires_Eng_Suuport__c.field-meta.xml
<CustomField>
    <fullName>Requires_Eng_Suuport__c</fullName>
    <description>Used for Quote Line Report for Engineering</description>
    <formula>IF( OR(Regular_Unit_Price_Each__c &gt;8000000,  ISPICKVAL(Engineering_Status__c, &apos;Requires Approval&apos;), ISPICKVAL(Requires_Technical_Review__c , &apos;Yes&apos;), Regular_Unit_Price_Each__c = 0) ,&apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>Requires Eng Support</label>
    <type>Text</type>
</CustomField>