force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requires_Inside_Sales_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Inside_Sales_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Inside Sales Approval</label>
    <type>Checkbox</type>
</CustomField>