force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requires_Sales_Executive_Approval__c.field-meta.xml
<CustomField>
    <fullName>Requires_Sales_Executive_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Sales Executive Approval</label>
    <type>Checkbox</type>
</CustomField>