force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requires_Technical_Review__c.field-meta.xml
<CustomField>
    <fullName>Requires_Technical_Review__c</fullName>
    <label>Requires Technical Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>