force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Run_Config_Sync__c.field-meta.xml
<CustomField>
    <fullName>Run_Config_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run Config Sync</label>
    <type>Checkbox</type>
</CustomField>