force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Sales_Rep_Max_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Max_Discount__c</fullName>
    <label>Sales Rep Max Discount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>