force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Same_As_Reference__c.field-meta.xml
<CustomField>
    <fullName>Same_As_Reference__c</fullName>
    <label>Same-As Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>